--- a/villa2.html
+++ b/villa2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
-    
+    <!-- body starts here -->
     <br />
     <div class="pg1">
     <div class="info">
