hamburger icon changed

--- a/tailwind.html
+++ b/tailwind.html
@@ -10,19 +10,19 @@
     <div class="flex justify-between ml-2 mr-2 mt-3">
       <h1 class="font-bold text-2xl pl-20">VILLA</h1>
       <b
-        ><div class="flex gap-12 pt-2 mr-36">
+        ><div class="flex gap-12 pt-2 mr-36 sm:hidden md:flex pl-32 ">
           <p class="text-red-600">Home</p>
           <p>Properties</p>
           <p>Property details</p>
           <p>Contact Us</p>
-          <div class="flex bg-black rounded-full w-40">
+          <div class="flex bg-black rounded-full w-40 ">
             <img
               class="bg-red-500 w-8 pl-2 pr-2 pt-2 pb-2 rounded-full"
               src="./images/calendar_4288108.png"
               alt=""
               width="10px"
             />
-            <p class="text-white w-32 pl-2 pt-1 pb-1 rounded-2xl">
+            <p class="text-white w-32 pl-2 pt-1 pb-1 rounded-2xl ">
               Schedule a visit
             </p>
           </div>
@@ -42,13 +42,14 @@
         <h3 class="bg-orange-600 text-white h-9 w-24 pl-2 pt-1 rounded">
           Apartment
         </h3>
-        <h3 class="bg-black text-white w-24 pl-2 pt-1 rounded">Villa House</h3>
-        <h3 class="bg-black text-white w-24 pl-2 pt-1 pl-3 rounded">
+        <h3 class="bg-black text-white h-9 w-24 pl-2 pt-1 rounded">Villa House</h3>
+        <h3 class="bg-black text-white h-9 w-24 pl-2 pt-1 pl-3 rounded">
           Penthouse
         </h3>
       </div>
     </div>
     <br /><br />
+    <!-- box -->
     <div class="flex ml-20 mr-40 gap-20">
       <div class="shadow-[0_3px_10px_rgb(0,0,0,0.2)] w-64 pl-2 pr-2 rounded">
         <p class="pl-3 pt-5">Total Flat Space : 182m2</p>
@@ -66,9 +67,13 @@
         <p class="pl-3 pt-5 pb-3">Payment Process : Bank</p>
       </div>
 
-      <div class="h-20">
+      <!-- img -->
+      <div class="h-20 sm: w-42">
         <img src="./images/deal-01.jpg " alt="" width="500px" />
       </div>
+
+      <!-- info -->
+
       <div class="">
         <p class="font-bold">Extra Info About Property</p>
         <br />
