--- a/villa2.html
+++ b/villa2.html
@@ -39,9 +39,9 @@
       </div>
 
       <div class="social">
-        <a href="https://www.facebook.com/"> <img src="./images/fb.png" alt="" width="25" /></a>
-        <a href="https://twitter.com/?lang=en"> <img src="./images/twitter.png" alt="" width="50" /></a>
-        <a href="https://www.linkedin.com/"> <img src="./images/linkedin.jpg" alt="" width="25" /></a>
+        <a href="https://www.facebook.com/"> <img src="./images/fb.jpg" alt="" width="25" /></a>
+        <a href="https://twitter.com/?lang=en"> <img src="./images/twitter.png" alt="" width="25" height="25px" /></a>
+        <a href="https://www.linkedin.com/"> <img src="./images/linkedin.png" alt="" width="25" /></a>
         <a href="https://www.instagram.com/"><img src="./images/insta.png" alt="" width="25" /></a> 
       </div>
     </div>
@@ -167,7 +167,7 @@
   </div>
 
   <div class="video">
-    <video  controls loop  >
+    <video id="vid" controls loop  >
       <source src="https://media.istockphoto.com/id/1312476333/video/big-contemporary-villa-animation-4k.mp4?s=mp4-640x640-is&k=20&c=mORx9I_wFSjMe6_psg1YkU0jknhsW0Kpm3WQpnMr4hY=" type="video/mp4">
      </video>
     </div>
@@ -186,7 +186,7 @@
       <p>Oakland,CA</p></div>
       </div>
       <div class="gridel">
-        <img id="vill1img" src="./images/pg3v3.jpg" alt="" >
+        <img id="vill1img" src="./images/pg3v2.jpg" alt="" >
       <div class="addupload"><b><p>Model Villa 200,Oakland</p></b>
       <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
        <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
@@ -194,7 +194,7 @@
       <p>Bakersfield,CA</p></div>
       </div>
       <div class="gridel">
-        <img id="vill1img" src="./images/pg3v2.jpg" alt="" >
+        <img id="vill1img" src="./images/pg3v3.jpg" alt="" >
       <div class="addupload"><b><p>Model Villa 550,Oakland</p></b>
       <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
        <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
