background and footer added

--- a/villa2.html
+++ b/villa2.html
@@ -162,71 +162,69 @@
     </div>
   </div>
 
+  <div class="background1"></div>
   <div class="video">
+    <h4 style="color: #f99696;"> |VIDEO VIEW </h4>
+    <h1 style="color: white;"> Get Closer View & Different Feeling</h1><br><br>
     <video id="vid" controls loop  >
       <source src="https://media.istockphoto.com/id/1312476333/video/big-contemporary-villa-animation-4k.mp4?s=mp4-640x640-is&k=20&c=mORx9I_wFSjMe6_psg1YkU0jknhsW0Kpm3WQpnMr4hY=" type="video/mp4">
      </video>
     </div>
     <br>
 
+    
+
   <div class="pg3">
     <h2 id="models">MODEL VILLAS</h2><br>
 
     <div class="grid" id="allvilla">
-      <!-- <div class="gridel">
-        <img id="vill1img" src="./images/pg3v1.jpg" alt="" >
-      <div class="addupload"><b><p>Model Villa 800,Oakland</p></b>
-      <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
-       <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
-      height="25">   
-      <p>Oakland,CA</p></div>
-      </div>
-      <div class="gridel">
-        <img id="vill1img" src="./images/pg3v2.jpg" alt="" >
-      <div class="addupload"><b><p>Model Villa 200,Oakland</p></b>
-      <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
-       <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
-      height="25">   
-      <p>Bakersfield,CA</p></div>
-      </div>
-      <div class="gridel">
-        <img id="vill1img" src="./images/pg3v3.jpg" alt="" >
-      <div class="addupload"><b><p>Model Villa 550,Oakland</p></b>
-      <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
-       <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
-      height="25">   
-      <p>Oakland,CA</p></div>
-      </div>
-      <div class="gridel">
-        <img id="vill1img" src="./images/pg3v4.jpg" alt="" >
-        <div class="addupload"><b><p>Model Villa 650,Burbank</p></b>
-        <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
-         <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
-        height="25">   
-        <p>Burbank,CA</p></div>
-      </div>
-      <div class="gridel">
-        <img id="vill1img" src="./images/pg3v5.jpg" alt="" >
-      <div class="addupload"><b><p>Model Villa 120,Burbank</p></b>
-      <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
-       <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
-      height="25">   
-      <p>Burbank,CA</p></div>
-      </div>
-      <div class="gridel">
-        <img id="vill1img" src="./images/pg3v6.jpg" alt="" >
-      <div class="addupload"><b><p>Model Villa 860,Burbank</p></b>
-      <img  id="uploadicon" src="./images/upload icon.png" alt="" width="20px" height="20px"></div>
-       <div class="locplace"> <img id="locationicon" src="./images/new location icon.jpg" alt="" width="25"
-      height="25">   
-      <p>Burbank,CA</p></div>
-      </div>
-    </div> -->
-
 
   </div>
+  <br><br><br>
+  <div class="background2"></div>
+  <div class="contact">
+    <div class="container">
+    <h3 style="color: red;">|CONTACT US</h3>
+    <h1 style="color: white;">Get In Touch With <br>Our Agents </h1><br>
+  </div>
+  <div class="map-form">
+    <div class="">
+  <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth" height="500px" width="100%" frameborder="0" style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);" allowfullscreen=""></iframe>
+  </div><br>
+
+  <div class="contact-details">
+  <div class="phone">
+      <img id="phoneicon" src="./images/phone-call.png" alt=""  >
+      <h3>010-020-0340 <br><span style="color: rgb(153, 151, 151);">Phone Number</span></h3>
+    </div> 
+  <div class="mail-bottom">
+    <img id="mailicon" src="./images/email-icon-free-vector.jpg" alt="">
+    <h3>info@villa.co <br><span style="color: rgb(153, 151, 151);">Business Email</span></h3>
+  </div>
+</div>
+
+</div>
 
 
+<div class="form">
+  <label for="name">Full Name</label><br><br>
+  <input class="ip" type="text" placeholder="Your Name..." style="width: 300px; height: 20px;"><br><br>
+  <label for="email">Email Address</label><br><br>
+  <input class="ip" type="email" placeholder="Your E-mail..."  style="width: 300px; height: 20px;"><br><br>
+  <label for="text">Subject</label><br><br>
+  <input class="ip" type="text" placeholder="Subject..."  style="width: 300px; height: 20px;"><br><br>
+  <label for="message">Message</label><br><br>
+  <textarea class="ip" name="message" id="" cols="30" rows="10" placeholder="Your message"></textarea><br><br>
+  <button id="send-message">Send Message</button>
+</div>
+</div>
+  </div>
+<br><br>
+<!-- footer -->
+<div class="footer">
+  <h3 id="copyright">Copyright © 2048 Villa Agency Co.,Ltd.All rights reserved</h3>
+</div>
 
   </body>
   <script src="./script.js"></script>
