--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Villa</title>
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="./index.css" />
     
   </head>
   <body>
@@ -24,6 +24,7 @@
           </div>
           <div class="mailid"><p>info@company.com</p></div>
         </div>
+        <div class="vertical-line"></div>
         <div class="location">
           <div class="addicon">
             <img
@@ -39,11 +40,11 @@
       </div>
 
       <div class="social">
-        <a href="https://www.facebook.com/"> <img src="./images/fb.jpg" alt="" width="25" /></a>
-        <a href="https://twitter.com/?lang=en"> <img src="./images/twitter.png" alt="" width="25" height="25px" /></a>
-        <a href="https://www.linkedin.com/"> <img src="./images/linkedin.png" alt="" width="25" /></a>
-        <a href="https://www.instagram.com/"><img src="./images/insta.png" alt="" width="25" /></a> 
-      </div>
+        <ul><a href="https://www.facebook.com/"> <img src="./images/fb.jpg" alt="" width="25" /></a></ul>
+        <ul><a href="https://twitter.com/?lang=en"> <img src="./images/twitter.png" alt="" width="25" height="25px" /></a></ul> 
+        <ul> <a href="https://www.linkedin.com/"> <img src="./images/linkedin.png" alt="" width="25" /></a></ul>
+        <ul> <a href="https://www.instagram.com/"><img src="./images/insta.png" alt="" width="25" /></a> </ul>
+       </div>
     </div>
     <div class="stick">
       <div class="heading" id="head">
@@ -53,11 +54,12 @@
         </div>
         <b
           ><div class="menu" id="menuid">
-            <a id="home">Home</a>
-            <a id="prop">Properties</a>
-            <a id="propdetail">Property details</a>
-            <a id="contact">Contact Us</a>
-            <a id="schedule">Schedule a visit</a>
+            <ul><a style="color: red;" href="./home.html" id="home">Home</a></ul>
+            <ul><a href="./properties.html" id="prop">Properties</a></ul>
+            <ul><a href="./tailwind.html"id="propdetail">Property details</a></ul>
+            <ul><a href="./contact.html" id="contact">Contact Us</a>     </ul>       
+            <ul><a href="./home.html" id="schedule">Schedule a visit</a></ul>
+            
           </div>
         </b>     
     </div>
